Fixed team page on mobile version

--- a/sass/core/_responsive.scss
+++ b/sass/core/_responsive.scss
@@ -389,7 +389,7 @@ Media Queries for Smartphones
     ul {
       > li {
         width: 29%;
-        margin: 0 2% -35px 2% !important;
+        margin-bottom: -35px;
 
         img,
         a img {
